@@ -18,6 +18,14 @@ module Gitlab
         end
       end
 
+      def committer_hash(email:, name:)
+        {
+          email: email,
+          name: name,
+          time: Time.now
+        }
+      end
+
       def tag_name(ref)
         ref = ref.to_s
         if self.tag_ref?(ref)
